<resources>
    <string name="app_name">Stacrypt</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_market">Market</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="action_logout">Logout</string>
    <string name="action_users">Users</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="already_logged_in_toast">Welcome !</string>
    <string name="success_login_toast">Welcome back</string>
    <string name="success_register_toast">Registered successfully! Do Login</string>
    <string name="error_login_toast">Authentication failed.</string>
    <string name="error_register_toast">Registration problem. Maybe you have already registered.</string>
    <string name="problem_occurred_toast">Problem occurred.</string>
    <string name="title_activity_profile_setting">Stacrypt User Profile</string>

    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="trade">Trade</string>
    <string name="other">Other</string>

    <string name="error_invalid_bank_card_number">This is not a valid bank card number</string>
    <string name="error_invalid_bank_card_holder">This is not a valid bank card holder name</string>
    <string name="error_invalid_bank_account_number">This is not a valid bank account IBAN</string>
    <string name="error_invalid_bank_account_owner">This is not a valid bank account owner</string>
    <string name="toast_bank_card_added_successfully">Bank card added successfully</string>
    <string name="chart">Chart</string>
    <string name="book">Book</string>
    <string name="my_orders">My Orders</string>
    <string name="my_deals">My Deals</string>
    <string name="history">History</string>
    <string name="market_order">Market Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="price">Price</string>
    <string name="limit_order">Limit Order</string>
    <string name="sell">sell</string>
    <string name="buy">buy</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="change_password">Change Password</string>
    <string name="mobile_verification_description">Please enter your mobile number to receive a verification code</string>
    <string name="do_mobile_verification_description">A verification code has been sent to you by SMS. Please enter it below</string>
    <string name="phone_number">Phone Number</string>
    <string name="loading">Loading…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="amount">Amount</string>
    <string name="address">Address</string>
    <string name="title_notification_list">Notifications</string>
    <string name="title_notification_detail">Notification Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="identity">Identity</string>
    <string name="national_or_passport_number">National (or passport) number</string>
    <string name="info">Info</string>
    <string name="your_new_account">Your New Account</string>
    <string name="account_iban">Account IBAN</string>
    <string name="iban_sample">IR 12 3456 7812 3456 7812 3456 781 2345 6781</string>
    <string name="account_owner_name">Account Owner Name</string>
    <string name="owner_sample">Jack Daniel</string>
    <string name="save">Save</string>
    <string name="your_new_card">Your New Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_sample">11** **** **33 4444</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="owner_sample">Jack Daniel</string>
    <string name="save">Save</string>
    <string name="transaction_history">Transaction History</string>
    <string name="changes">Changes</string>
    <string name="tag">Tag</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="renew">Renew</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="renew">Renew</string>
    <string name="address">Address</string>
    <string name="commission">Commission</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="send_me_the_verification_email">Send me the verification email</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>

    <string name="empty_dash">---</string>
    <string name="asks">Asks</string>
    <string name="bids">Bids</string>
    <string name="change">Change</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="quote_currency">Quote Currency</string>
    <string name="statistics">Statistics</string>
    <string name="market_cap">Market Cap</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="ask_amount">Ask Amount</string>
    <string name="bid_count">Bid Count</string>
    <string name="ask_count">Ask Count</string>
    <string name="past_24h">Past 24H</string>
    <string name="open">Open</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="close">Close</string>
    <string name="volume">Volume</string>
    <string name="deal">Deal</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="verify_your_phone">Verify your phone</string>
    <string name="send_me_sms">Send me SMS</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="value">Value</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="security_alert_2fa_is_disable">Security Alert: 2FA is disable</string>
    <string name="verification">Verification</string>
    <string name="verification_process">Verification Process</string>
    <string name="evidences">Evidences</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="bank_cards">Bank Cards</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="support">Support</string>
    <string name="tickets">Tickets</string>
    <string name="new_ticket">New Ticket</string>
    <string name="application_security">Application Security</string>
    <string name="application_pin">Application PIN</string>
    <string name="whip_cache">Whip Cache</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdrawal_pin">Withdrawal PIN</string>
    <string name="withdrawal_limitations">Withdrawal Limitations</string>
    <string name="account_security">Account Security</string>
    <string name="_2_factor_authentication_2fa">2 Factor Authentication ( 2FA )</string>
    <string name="api_keys">API Keys</string>
    <string name="sessions">Sessions</string>
    <string name="ip_whitelist">IP Whitelist</string>
    <string name="security_logs">Security Logs</string>
    <string name="change_password">Change Password</string>
    <string name="other">Other</string>
    <string name="logout">Logout</string>
    <string name="choose_a_new_password">Choose a new Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="forgot_your_pattern">Forgot your pattern?</string>
    <string name="security_pattern">Security Pattern</string>
    <string name="enter_your_pattern">Enter your pattern</string>
    <string name="accept">Accept</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="info">Info</string>
    <string name="id">Id</string>
    <string name="currency">Currency</string>
    <string name="type">Type</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="status">Status</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="amount">Amount</string>
    <string name="commission">Commission</string>
    <string name="payment">Payment</string>
    <string name="payment_instruction">Payment Instruction</string>
    <string name="payment_id">Payment Id</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="confirmations">Confirmations</string>
    <string name="reference_id">Reference Id</string>
    <string name="pay">Pay</string>
    <string name="choose_the_payment_method">Choose the payment method:</string>
    <string name="choose_the_bank_card">Choose the bank card:</string>
    <string name="or_add_new_card">Or add new card</string>
    <string name="make_a_dopsit_transaction">Make a dopsit transaction</string>
    <string name="choose_the_bank_account">Choose the bank account:</string>
    <string name="or_add_new_account">Or add new account</string>
    <string name="choose_the_payment_method">Choose the payment method:</string>
    <string name="withdraw_from_my_account">Withdraw from my account</string>
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="close">Close</string>
    <string name="deposit">Deposit</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_owner_name">Account Owner Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="wait_a_few_hours_you_will_be_fully_verified_soon">Wait a few hours, you will be fully verified soon!</string>
    <string name="withdraw_from_my_account">Withdraw from my account</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
