<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".profile.ProfileFragment"
              android:background="@color/colorPrimary">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
        >

            <TableRow>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/colorPrimary"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/icons8_businessman_filled_90"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="0dp"
                                android:tint="@color/colorPrimaryLight"
                            />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/email"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="2"
                                    tools:text="test@test.com"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:paddingTop="10dp"
                                    android:gravity="center"
                                    android:textAllCaps="true"
                                />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:id="@+id/verification_status"
                                    tools:text="Verified Client"
                                    android:textSize="14dp"
                                    tools:drawableStart="@drawable/ic_check_circle_black_24dp"
                                    android:textColor="@color/real_green"
                                    tools:drawableTint="@color/real_green"
                                    android:textAllCaps="false"
                                    android:layout_gravity="center"
                                    android:fontFamily="@font/din_medium"
                                    android:gravity="center_vertical"/>

                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/colorPrimaryLight"/>

                        <TextView
                            android:id="@+id/last_login"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryTextLight"
                            android:fontFamily="@font/din_medium"
                            tools:text="Last Login On: 2019-02-12   By: 192.169.1.1"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>


            <TableRow
                android:layout_marginTop="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/pink_700">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingStart="10dp"
                        android:text="@string/security_alert_2fa_is_disable"/>

                </androidx.cardview.widget.CardView>
            </TableRow>


            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/verification"
                    android:drawableStart="@drawable/ic_verified_user_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/verification"
                    android:text="@string/verification_process"/>

            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/evidence"
                    android:enabled="false"
                    android:text="@string/evidences"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/bank_accounts"
                    android:drawableStart="@drawable/ic_credit_card_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/bank_cards"
                    android:text="@string/bank_cards"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/bank_accounts"
                    android:text="@string/bank_accounts"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/support"
                    android:drawableStart="@drawable/ic_perm_phone_msg_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/tickets"
                    android:text="@string/tickets"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/new_ticket"
                    android:text="@string/new_ticket"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/application_security"
                    android:drawableStart="@drawable/ic_screen_lock_portrait_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/pin"
                    android:text="@string/application_pin"/>

            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/whipe"
                    android:text="@string/whip_cache"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/withdrawal"
                    android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/withdrawal_pin"
                    android:text="@string/withdrawal_pin"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/withdrawal_limit"
                    android:enabled="false"
                    android:text="@string/withdrawal_limitations"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/account_security"
                    android:drawableStart="@drawable/ic_security_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/second_factor"
                    android:enabled="false"
                    android:text="@string/_2_factor_authentication_2fa"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:enabled="false"
                    android:id="@+id/api_key"
                    android:text="@string/api_keys"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/sessions"
                    android:enabled="false"
                    android:text="@string/sessions"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/ip_whitelist"
                    android:enabled="false"
                    android:text="@string/ip_whitelist"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/logs"
                    android:enabled="false"
                    android:text="@string/security_logs"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/change_password"
                    android:enabled="false"
                    android:text="@string/change_password"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/other"
                    android:drawableStart="@drawable/ic_more_horiz_black_24dp"
                    android:drawableTint="@color/colorGrayText"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorGrayText"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:id="@+id/logout"
                    android:text="@string/logout"/>
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>