<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".profile.security.ChangePasswordFragment"
              android:orientation="vertical"
              android:gravity="center"
              android:paddingBottom="100dp">


    <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/current_password"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/current_password"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            />

    <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/new_password"
            android:gravity="center"
            android:id="@+id/new_password"
            android:layout_marginBottom="5dp"
            />

    <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/repeat_password"
            android:gravity="center"
            android:id="@+id/repeat_password"
            android:layout_marginBottom="80dp"
            />

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/change_password"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:fontFamily="@font/open_sans_bold"
            android:backgroundTint="@color/colorSecondary"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textColor="@color/colorPrimaryLight"/>


</LinearLayout>